--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write --ignore-unknown **/*.{tsx,ts}"
   },
   "dependencies": {
     "@supabase/auth-ui-react": "^0.2.6",
     "@supabase/supabase-js": "^2.2.3",
+    "prettier": "^2.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1"
